📈 Add Google Analytics With react-ga

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Netrailer</title>
 
-    <!-- Plausible -->
+    <!-- Plausible Analytics Code (Dies at 14-3-2021) -->
     <script
       async
       defer
