📈 Add Google analytics in the index.html (v4)

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,19 @@
       data-domain="netrailer.netlify.app"
       src="https://plausible.io/js/plausible.js"
     ></script>
+
+    <!-- Google Analytics Code -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-5HHE9XXJNE"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+    </script>
   </head>
 
   <body>
