📈 Change my Tracking ID (From v4 to UA "old")

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <!-- Google Analytics Code -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-5HHE9XXJNE"
+      src="https://www.googletagmanager.com/gtag/js?id=UA-131848957-7"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -32,6 +32,8 @@
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
+
+      gtag("config", "UA-131848957-7");
     </script>
   </head>
 
